ckanext/dgu/theme/public/css/dgu.css
/* ... */
.notes {
  margin-bottom: 10px;
  padding: 8px;
}
.notes p:last-child {
  margin-bottom: 0;
}
h1 .abbreviation {
  color: #888;
}

.table-dgu-fixed-size {
  table-layout: fixed;
}
.table-dgu-fixed-size td {
  overflow: hidden;
  white-space: nowrap;
}
.table-dgu-fixed-size td.dataset-details {
  white-space: normal;
  word-wrap: break-word;
}
button span {
  white-space: nowrap;
}
ul.arrow-list {
  list-style-image: url('/images/arrow-list.png');
}
ul.green-bullet {
  list-style-image: url('/images/bullet-green.png');
}
.widget-container ul.tags,
.widget-container ul.groups {
 list-style-image: none;
 list-style: none;
 margin-left: 0;
}
.pagination ul {
  background: #fff;
}
table.tablesorter thead th.headerSortUp {
    background-image: url('/images/icons/sort-asc.gif');
    background-color: #eee;
}
table.tablesorter thead th.headerSortDown {
    background-image: url('/images/icons/sort-desc.gif');
    background-color: #eee;

}
table.tablesorter th.header {
    background-image: url('/images/icons/sort.gif');
    cursor: pointer;
    font-weight: bold;
    background-repeat: no-repeat;
    background-position: center right;
    padding-right: 20px;
    border-right: 1px solid #dad9c7;
    margin-left: -1px;
}

/* BlackBar */
/* -------- */
#blackbar-underlay {
  height: 36px;
}
#blackbar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1500;
  width: 100%;
  background: #333;
  background: rgba(0,0,0,0.8);
  color: #fff;
  height: 36px;
}
#blackbar > .container {
  width: 100%;
  max-width: 940px;
}
#blackbar a {
  color: #fff;
}
#blackbar #hm-government-link {
  float: left;
  font-weight: 100;
  margin-top: 5px;
  margin-left: 10px;
}
#blackbar #login-or-signup {
  float: right;
  margin-top: 10px;
  margin-right: 10px;
}
#blackbar #login-or-signup a {
  font-weight: bold;
}

/* Branding space */
/* -------------- */
#branding {
  height: 88px;
  padding-top: 21px;
  padding-left: 55px;
}


/* Nav */
/* --- */
ul#nav {
  list-style-type: none;
  margin-left: 0;
  margin-bottom: 0;
  font-size: 0; /* Delete space between inline block elements */
}
#nav li {
  padding: 0;
  width: 100px;
  position: relative;
  /* Cross-browser inline-block positioning */
  display: inline-block;
  zoom: 1;
  *display: inline;
  /* Gradient */
  background: rgb(51,51,51); /* Old browsers */
  background: -moz-linear-gradient(top,  rgba(68,68,68,1) 0%, rgba(34,34,34,1) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(68,68,68,1)), color-stop(100%,rgba(34,34,34,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* IE10+ */
  background: linear-gradient(top,  rgba(68,68,68,1) 0%,rgba(34,34,34,1) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#222222',GradientType=0 ); /* IE6-9 */
}
#nav li#nav-home {
  width: 115px;
}
#nav li#nav-linked-data {
  width: 110px;
}
#nav li#nav-about {
  width: 115px;
}
#nav li a {
  color: #ccc;
  text-align: center;
  display: block;
  padding: 10px 10px;
  border-left: 1px solid #505050;
  border-right:  1px solid #181818;
  font-size: 15px;
  font-weight: 300;
}
#nav li:first-child a {
  border-left-color: transparent;
}
#nav li:last-child a {
  border-right-color: transparent;
}
#nav li a:hover {
  color: #fff;
  text-decoration: none;
  background: url('/images/nav-chevron.png') 50% 100% no-repeat;
}
#nav li.active a {
  background: url('/images/nav-chevron.png') 50% 100% no-repeat;
}
#nav li a .nav-icon {
  width: 21px;
  height: 18px;
  margin: 0 10px 0 0;
  background: url('/images/home-icon.png');
  display: inline-block;
  zoom: 1;
  *display: inline;
  vertical-align: top;
}
#nav li:hover a .nav-icon {
  background-position: -21px 0;
}


/* Subnavigation */
/* ------------- */
#subnav {
  list-style-type: none;
  margin: 0;
  padding: 6px 18px;
  border: 1px solid #ccc;
  border-top: none;
}
#subnav li {
  display: inline;
}
#subnav .divider {
  color: #bbb;
}
#subnav a.active {
  font-weight: bold;
  color: #336600;
}

/* No-subnav mode */
body.no-subnav #subnav {
  display: none;
}
body.no-subnav .content-start {
  margin-top: 56px;
}

/* Minor Navigation */
/* ---------------- */
#minornavigation {
  margin: 15px -25px 15px -26px;
  background: #e2e2e2 url('/images/minornavigation.png');
  height: 46px;
}
#minornavigation-bg-left {
  background: url('/images/minornavigation-bg-left.png') no-repeat top left;
  height: 46px;
}
#minornavigation-bg-right {
  background: url('/images/minornavigation-bg-right.png') no-repeat top right;
  height: 46px;
}
#minornavigation .nav {
  padding: 2px 4px;
  font-weight: bold;
  margin: 0;
  padding-left: 20px;
}
#minornavigation .nav > li > a {
  border: 1px solid transparent;
  border-bottom: none;
  border-right: none;
  height: 14px;
  margin-right: 5px;
  padding-top: 7px;
}
#minornavigation .nav > li > a:hover {
  border-color: #bbb;
}
#minornavigation .nav > li.active > a {
  background: #fff;
  border-color: #666;
  color: #000;
}
#minornavigation .nav > li.open > a {
  border-color: #666;
}
#minornavigation .nav > li.disabled > a,
#minornavigation .nav > li.disabled > a:hover {
  color: #888;
  border-color: transparent;
  background: transparent;
}
#minornavigation .caret {
  border-top-color: #555;
  margin-left: 8px;
}
#minornavigation .nav > li.open .caret {
  border-top-color: #fff;
}
#minornavigation .divider {
  padding: 8px 10px;
  font-size: 14px;
  color: #888;
}
.dropdown-menu {
  min-width: 250px;
}
.dropdown-menu a {
  font-weight: bold;
  padding: 5px 15px;
  margin-bottom: 2px;
  color: #690;
}
.dropdown-menu hr {
  margin: 4px 0;
}
.dropdown-menu li:last-child a {
  margin-bottom: 0;
}
/* ... */

